Fix some wrapping issues with tasks

--- a/client/styles/room/todo.module.scss
+++ b/client/styles/room/todo.module.scss
@@ -132,43 +132,40 @@
                     }
                 }
                 .taskName {
-                    line-height: 1.5rem;
                     display:flex;
-                    flex-direction:row;
-                    align-items:center;
-                    flex-wrap:wrap;
-                    & > div {
-                        margin-right:0.5rem;
-                    }
+                    flex-direction: row;
+                    align-items: stretch;
+
                     .deleteTask {
-                        width:0;
-                        display:inline-block;
                         @include flex-center-row;
-                        overflow:hidden;
-                        padding:2px 0;
+                        overflow-x:hidden;
+                        width:0;
+                        padding:0 5px;
                         color:var(--error-color);
                         cursor:pointer;
                         &:hover {
                             filter:brightness(0.7);
-                        }
-                        svg {
-                            transform:translateY(0px);
                         }
                         &.showDeleteTask {
                             animation: expand-delete 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275) 1;
                             width:2rem; 
                         }
                     }
-                    .taskTag {
-                        background: var(--tag-color);
-                        color: var(--background-color);
-                        border-radius: 0.8rem;
-                        margin-left: 0.5rem;
-                        padding: 0.1rem 0.7rem;
-                        font-size: 0.8rem;
-                        font-weight: bold;
-                        white-space: nowrap;
-                        margin:0.2rem 0.5rem;
+
+                    .taskRow {
+                        display:flex;
+                        flex-direction: row;
+                        flex-wrap:wrap;
+                        gap:0.5rem;
+                        .taskTag {
+                            background: var(--tag-color);
+                            color: var(--background-color);
+                            border-radius: 0.8rem;
+                            padding: 0.1rem 0.7rem;
+                            font-size: 0.8rem;
+                            font-weight: bold;
+                            white-space: nowrap;
+                        }
                     }
                 }
 
